<resources>
    <string name="app_name">Aide Lua Pro</string>
    <string name="app_summary">Developed for faster mobile</string>
	<string name="app_documnet">App document</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="run">Run</string>
    <string name="menu">Menu</string>
    <string name="more">More</string>
    <string name="more_popup">More...</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="format">Format</string>
    <string name="code">Code</string>
    <string name="code_popup">Code...</string>
    <string name="check_import">Analysis import</string>
    <string name="tools_popup">Tools...</string>
    <string name="reminder">Tips</string>
    <string name="unknown">(Unknow)</string>
    <string name="unknowError">Unknown error</string>
    <string name="copy">Copy</string>
	<string name="copy_popup">Copy...</string>
	<string name="copy_name_popup">Copy name...</string>
	<string name="copiedToClipboard">Copied to clipboard.</string>
    <string name="selectAll">Select all</string>
    <string name="deselectAll">Deselect all</string>
    <string name="editor">Editor</string>
    <string name="edit">Edit</string>
    <string name="preview">Preview</string>
    <string name="tab">Tab bar</string>
    <string name="support_lua_regular">Support Lua regular</string>
    <string name="name">Name</string>
    <string name="httpDebugging_windmill">Http debugging (Windmill)</string>
    <string name="luaManual_windmill">Lua manual (Windmill)</string>
    <string name="manual">User manual</string>
    <string name="commentedCode">Commented code</string>
    <string name="uncommentedCode">Uncomment code</string>
    <string name="commentCode">Comment code</string>
    <string name="uncommentCode">Uncomment code</string>
    <string name="logCat">Log Cat</string>
    <string name="logcat">Logcat</string>
    <string name="viewError">View Error</string>
    <string name="openInAndroidDeveloper">Open in \"Android Developer\"</string>
    <string name="download">Download</string>
    <string name="checkingUpdates">Checking for updates</string>
    <string name="font">Font</string>
    <string name="open_source_repository">Open source repository</string>
    <string name="buildAndPack">Build &amp; Pack</string>
    <string name="compileLua">Compile Lua</string>
    <string name="compileLua_summary">Compile lua before repackaging APK and before full operation. (This setting can be overridden by the compileLua property in the project config.lua file)</string>
    <string name="zipalign">Zipalign alignment</string>
    <string name="zipalign_tool">Zipalign tool</string>
    <string name="zipalign_summary">Helps ensure that all uncompressed files in the archive are aligned relative to the start of the file. (This setting can be overridden by the alignZip property in the project config.lua file)</string>
    <string name="open">Open</string>
    <string name="open_failed">Open failed</string>
    <string name="exit_toast">Press again to exit the program.</string>
    <string name="res_reference">Reference resources</string>
    <string name="create">Create</string>
    <string name="create_success">Created successfully</string>
    <string name="create_failed">Created Failed</string>
    <string name="creating">Creating...</string>
    <string name="save_succeed">Saved successfully</string>
    <string name="save_failed">"Saved failed"</string>
    <string name="save_failed_withMessage">Save failed because %1$s</string>
    <string name="drawer_open">Close drawer</string>
    <string name="drawer_close">Open drawer</string>
    <string name="file">File</string>
    <string name="file_up">Return to the previous directory</string>
    <string name="file_popup">File...</string>
    <string name="file_cannot_open_compiled_file">"Can't open the compiled file."</string>
    <string name="file_not_find">File not found</string>
    <string name="file_not_supported">File type not supported</string>
    <string name="file_create">Create a file</string>
    <string name="file_create_withName">Create %1$s</string>
    <string name="file_exists">File already exist</string>
    <string name="file_name">File name</string>
    <string name="file_name_copy">Copy file name</string>
    <string name="file_close">Close file</string>
	<string name="file_close_all">Close all files</string>
    <string name="file_close_other">Close other files</string>
	<string name="file_current_path">Current file path</string>
    <string name="file_reopen">Reopen file</string>
    <string name="file_noChange">This file has not been changed</string>
    <string name="file_viewName_content">Name: %1$s</string>
    <string name="file_noOpen">No file opened</string>
    <string name="file_createCopy">Create a copy</string>
    <string name="directory">Folder</string>
    <string name="directory_go_popup">Open Directory...</string>
    <string name="directory_create">Create folder</string>
    <string name="directory_name">Folder name</string>
    <string name="project">Project</string>
    <string name="project_root">Project root</string>
    <string name="project_popup">Project...</string>
    <string name="project_bin_run">Second pack &#038; run</string>
    <string name="project_bin">Second pack</string>
    <string name="project_build">Build project</string>
    <string name="project_open_first">Please open a project first.</string>
    <string name="project_open_toast">Opened project: %1$s</string>
    <string name="project_no_open">Project not opened</string>
    <string name="project_create">Create project</string>
    <string name="project_create_withName">Create %1$s</string>
    <string name="project_exists">Project already exists</string>
    <string name="project_create_tip">Please note after creating the project:\n 1. Before packaging, you need to go to \"Aide>Upper-right menu>More>Settings>Build and run>android.jar file\" to fill in the path of the downloaded \"android-r-aide.jar\"  \n 2. After creation, you need to click \"Aide>Upper right menu>More>Project>Build refresh\" to refresh the project\n 3. Modify the files in the directory except \"assets_bin\", \"luaLibs\" and \".aidelua\".  First use Aide to package to see the effect\n 4. Aide needs to open \"Redefine Apk Build Path\"\n 5. Aide recommends using \"AIDE Advanced Settings Edition\"</string>
    <string name="project_create_gathering">Gathering information</string>
    <string name="project_create_unzip_base">Extracting base template</string>
    <string name="project_create_unzip_slibs">Extracting simple libraries</string>
    <string name="project_create_unzip_jarlibs">Extracting jar Libraies</string>
    <string name="project_create_unzip_clibs">Extracting complex libraries</string>
    <string name="project_create_write">Writing information</string>
    <string name="project_create_failed">Creation failed</string>
    <string name="project_app_name">App name</string>
    <string name="project_package_name">Package name</string>
    <string name="project_appTitle">%1$s_AideLuaPro</string>
    <string name="project_appSubtitle_360dp">Prj: %1$s</string>
    <string name="project_appSubtitle_380dp">Prj: %1$s</string>
    <string name="project_appSubtitle_390dp">Project: %1$s</string>
    <string name="project_open">Open project</string>
    <string name="project_reopen">Reopen project</string>
    <string name="project_close">Close project</string>
    <string name="project_properties">Project properties</string>
    <string name="project_addLibraries">Add libraries</string>
    <string name="projects_path">Projects path</string>
    <string name="projects_path_select">Select project path</string>
    <string name="projects_paths">Projects path</string>
	<string name="projects_paths_summary">Multiple paths are supported. Use ";" to split paths.</string>
    <string name="binproject_loading">Packing...</string>
    <string name="binproject_loading_env">Preparing environment...</string>
    <string name="binproject_loading_with_parent">Packing...\n%1$s</string>
    <string name="binproject_creating_variables">Creating variables</string>
    <string name="binproject_arrangement">Sorting out</string>
    <string name="binproject_unzip">Unziping %1$s</string>
	<string name="binproject_unzip_done">Unzip has been completed</string>
	<string name="binproject_copying">Copying files</string>
	<string name="binproject_copy_done">Copy done</string>
	<string name="binproject_compiling">Compiling file</string>
    <string name="binproject_compile_done">Compiled completed</string>
    <string name="binproject_deleting">Deleting temporary folder</string>
    <string name="binproject_delete_done">Delete complete</string>
    <string name="binproject_signing">Signing to %1$s</string>
	<string name="binproject_sign_done">Signing completed</string>
    <string name="binproject_zip">Packing to %1$s</string>
	<string name="binproject_zip_done">Package completed</string>
	<string name="binproject_zipalign">Aligning with Zipalign</string>
    <string name="binproject_zipalign_done">Alignment completed</string>
	<string name="binproject_state_succeed">Packaged successfully</string>
    <string name="binproject_state_succeed_with_path">Packaged successfully\nPath: %1$s</string>
    <string name="binproject_state_succeed_with_path_needSign">Packaged successfully, please sign the Apk file. </string>
    <string name="binproject_state_failed">Packaging failed</string>
    <string name="binproject_error_notfind">Warning: This string is about to be discarded\nNot found app.apk, please use AIDE to pack first</string>
    <string name="binproject_error_baseapk_notfind">The base package is not found. Please use Gradle tools such as AIDE Pro to build the project first.</string>
    <string name="binproject_error_parse">Installation package (%1$s) parsing failed</string>
    <string name="binproject_error_signer">Failed to sign, please sign manually.\nPath: %1$s</string>
    <string name="binproject_cannotFindTool">Unable to find the corresponding version of ReBuildTool, please check if Aide Lua is updated</string>
	<string name="newActivity">New Activity</string>
    <string name="delete">Delete</string>
    <string name="delete_withName">Delete %1$s</string>
    <string name="delete_warning">Are you sure you want to delete? It cannot be restored after deletion.</string>
    <string name="delete_succeed">Deletion succeed</string>
    <string name="delete_failed">Deletion failed</string>
    <string name="deleted_withName">Deleted %1$s</string>
    <string name="javaApiViewer">Java API Viewer</string>
    <string name="javaApiViewer_windmill">Java API Viewer (Windmill)</string>
    <string name="javaApiViewer_viewApi">View API</string>
    <string name="javaApiViewer_notFindClass">Class not found</string>
    <string name="javaApiViewer_fixImport">Classes to import</string>
    <string name="javaApiViewer_fixImport_loading">Loading...</string>
    <string name="javaApiViewer_parents">Parents</string>
    <string name="javaApiViewer_constructors">Constructors</string>
    <string name="javaApiViewer_events">Events</string>
    <string name="javaApiViewer_fields">Fields</string>
    <string name="javaApiViewer_methods">Methods</string>
    <string name="layoutHelper">Layout Helper</string>
    <string name="checkCode">Check for errors</string>
    <string name="checkCode_noGrammaticalErrors">There are no grammatical errors.</string>
    <string name="settings">Settings</string>
    <string name="settings_ui_richAnim">Rich animation</string>
    <string name="settings_support_Jesse205Library">Jesse205 library support</string>
    <string name="window_openNew">New window</string>
    <string name="window_openInNewWindow">Open in a new window</string>
    <string name="rename">Rename</string>
    <string name="plugins_popup">Plugins...</string>
</resources>