<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/subMenu_copy_name"
        android:title="@string/copy_name_popup">
        <menu>
        </menu>
    </item>
	<item
        android:id="@+id/menu_createCopy"
        android:title="@string/file_createCopy"/>
    <item
        android:id="@+id/menu_rename"
        android:title="@string/rename"/>
    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete"/>
    <item
        android:id="@+id/menu_openInNewWindow"
        android:title="@string/window_openInNewWindow"/>
    <item
        android:id="@+id/menu_reference"
        android:title="@string/res_reference"/>
    <!--<item
    android:id="@+id/menu_create"
    android:title="@string/create"/>
    -->   
</menu>
