<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_selectAll"
        android:icon="?android:attr/actionModeSelectAllDrawable"
        app:showAsAction="always"
        android:title="@android:string/selectAll"/>
    <item
        android:id="@+id/menu_cut"
        android:icon="?android:attr/actionModeCutDrawable"
        app:showAsAction="always"
        android:title="@android:string/cut"/>
    <item
        android:id="@+id/menu_copy"
        android:icon="?android:attr/actionModeCopyDrawable"
        app:showAsAction="always"
        android:title="@android:string/copy"/>
    <item
        android:id="@+id/menu_paste"
        android:icon="?android:attr/actionModePasteDrawable"
        app:showAsAction="always"
        android:title="@android:string/paste"/>
    <item
        android:id="@+id/subMenu_code"
        app:showAsAction="@integer/jesse205_menu_showasaction_600dp"
        android:title="@string/code_popup">
        <menu>
            <item
                android:id="@+id/menu_code_commented"
                android:title="@string/commentedCode"/>
            <item
                android:id="@+id/menu_code_viewApi"
                android:title="@string/javaApiViewer_viewApi"/>

        </menu>
    </item>
</menu>
